Fix some spacing issues

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -22,7 +22,7 @@ footer {
 
 footer li::after {
   content: '/';
-  margin-left: 1.5ch;
+  margin-left: .7rem;
 }
 
 footer li:last-child::after {
@@ -62,10 +62,8 @@ nav a.current {
   }
 }
 
-@media (max-width: 80ch) {
-  main,
-  body > footer {
-    margin: 1.5rem 2ch;
-  }
+main,
+body > footer {
+  padding: 0 1rem;
 }
 
